--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,33 @@ html {
   height: 100vh;
   padding: 2rem;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+#pokemon-image {
+  aspect-ratio: 1 1;
+  width: 100px;
+  height: 100px;
+  align-self: center;
 }
 
 .glow {
   text-shadow: 0 0 5px #0f0, 0 0 10px #0f0;
+}
+
+.pokedex-content {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+}
+
+.pokedex-content * {
+  text-align: center;
+}
+
+.pokedex-content h4 {
+  text-transform: capitalize;
 }
 
 #particles {
@@ -38,6 +61,10 @@ html {
 }
 
 #content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-height: 100vh;
   position: relative;
   z-index: 1;
 }
@@ -157,4 +184,44 @@ html {
   100% {
     transform: translate(0);
   }
+}
+
+
+#project-content {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
+  overflow-y: scroll;
+}
+
+#terminal-input {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  font-family: 'Courier New', monospace;
+  font-size: 16px;
+}
+
+#prompt {
+  color: #00ff00;
+  margin-right: 5px;
+}
+
+#current-project {
+  color: #00ffff;
+  margin-right: 5px;
+}
+
+#command-input {
+  background-color: transparent;
+  border: none;
+  color: #ffffff;
+  font-family: inherit;
+  font-size: inherit;
+  flex-grow: 1;
+  outline: none;
+}
+
+#command-input::placeholder {
+  color: #888888;
 }
