--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,28 @@ html {
   align-self: center;
 }
 
+#rec-tracks-container {
+  display: flex;
+  flex-direction: row;
+  max-width: 100wh;
+  overflow-x: scroll
+}
+
+.rec-track {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+
 .glow {
   text-shadow: 0 0 5px #0f0, 0 0 10px #0f0;
+}
+
+.number-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .pokedex-content {
